Big refactoring of "getCalculatedBars", code decrease twice.